--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "dev": "nodemon app",
     "start": "node app"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "author": "Sediq Abdullahi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1"
   }
 }
